--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
-         xmlns:tools="http://schemas.android.com/tools"
-         xmlns:bind="http://schemas.android.com/apk/res-auto">
-
-    <data class="RegisterBinding">
-        <variable name="viewModel" type="com.xinly.dendrobe.module.user.RegisterViewModel"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <data class="FindPwdBinding">
+        <variable name="viewModel" type="com.xinly.dendrobe.module.user.FindPwdViewModel"/>
     </data>
-
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            tools:context=".module.user.RegisterActivity">
+            tools:context=".module.user.FindPasswordActivity">
 
-        <!-- 标题栏 -->
-        <include
-                android:id="@+id/view_toolbar"
-                layout="@layout/layout_toolbar"
-                bind:toolBar="@{viewModel}"/>
+        <include layout="@layout/layout_toolbar"
+                 bind:toolBar="@{viewModel}"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical">
+
             <!-- 账户 -->
             <LinearLayout
                     android:layout_width="match_parent"
@@ -157,107 +152,14 @@
                   android:layout_marginStart="43dp"
                   android:background="@color/gray_light"/>
 
-            <!-- 密码 -->
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:id="@+id/iv_pwd"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/reg_pwd"/>
-
-                <EditText
-                        android:id="@+id/et_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:text="@={viewModel.passWord}"
-                        android:textColor="@color/font_black"
-                        android:textSize="15sp"
-                        android:singleLine="true"
-                        android:hint="请输入登录密码"
-                        android:background="@null"/>
-            </LinearLayout>
-
-            <View android:layout_width="match_parent"
-                  android:layout_height="1dp"
-                  android:layout_marginStart="43dp"
-                  android:background="@color/gray_light"/>
-
-            <!-- 账户 -->
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:id="@+id/iv_recommend"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/reg_recommend"/>
-
-                <EditText
-                        android:id="@+id/et_recommend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@={viewModel.recommendId}"
-                        android:textColor="@color/font_black"
-                        android:textSize="15sp"
-                        android:singleLine="true"
-                        android:hint="请输入推荐人ID（选填）"
-                        android:background="@null"/>
-            </LinearLayout>
-
-            <View android:layout_width="match_parent"
-                  android:layout_height="0.5dp"
-                  android:layout_marginStart="43dp"
-                  android:background="@color/gray_light"/>
         </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
-                android:orientation="horizontal">
-
-                <CheckBox
-                        android:id="@+id/tv_agree"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="10dp"
-                        android:layout_marginStart="15dp"
-                        android:textSize="14sp"
-                        android:checked="@={viewModel.agree}"
-                        android:textColor="@color/font_black_light"
-                        android:button="@drawable/reg_agree_selector"
-                        android:text="已阅读并同意"/>
-
-                <TextView
-                        android:id="@+id/tv_agreement"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        bind:onClickCommand="@{viewModel.agreementClick}"
-                        android:textColor="@color/font_blue_light"
-                        android:text="《用户协议》"/>
-        </LinearLayout>
-
 
         <Button
                 android:id="@+id/btn_next"
                 android:layout_width="match_parent"
                 android:textColor="@color/white"
                 android:textSize="17sp"
-                bind:onClickCommand="@{viewModel.goRegisterClick}"
+                bind:onClickCommand="@{viewModel.nextClick}"
                 android:layout_marginTop="82dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
@@ -266,15 +168,15 @@
                 android:background="@drawable/btn_bg_black"/>
 
         <TextView
-                android:id="@+id/tv_login"
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="5dp"
-                bind:onClickCommand="@{viewModel.loginClick}"
+                bind:onClickCommand="@{viewModel.switchClick}"
                 android:textColor="@color/font_black"
                 android:layout_gravity="center_horizontal"
+                android:text="@{viewModel.switchFindPwdText}"
                 android:drawableEnd="@drawable/arrow_right_black"
-                android:text="已有账号，立即登录"/>
+                tools:text="使用邮箱找回"/>
     </LinearLayout>
 </layout>
