--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data class="LoginBinding">
-
+        <import type="android.view.View"/>
+        <variable name="viewModel" type="com.xinly.dendrobe.module.user.LoginViewModel"/>
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".module.login.LoginActivity">
+            android:background="@color/white"
+            android:orientation="vertical"
+            tools:context=".module.user.LoginActivity">
 
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="17dp"
+                bind:onClickCommand="@{viewModel.closeClick}"
+                android:src="@drawable/login_close"/>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/bg_btn_black"
+                android:text="Hi~九度石斛！登录"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_marginStart="25dp"
+                    android:textColor="@color/font_black_light"
+                    android:text="登录即表示已阅读并同意"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    bind:onClickCommand="@{viewModel.agreementClick}"
+                    android:textColor="@color/font_blue_light"
+                    android:text="《用户协议》"/>
+        </LinearLayout>
+
+        <!-- 账户 -->
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:layout_marginTop="106dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:visibility="@{(viewModel.loginType==0)?View.VISIBLE:View.GONE}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_black"
+                    android:layout_marginEnd="12dp"
+                    android:drawableEnd="@drawable/arrow_down_black"
+                    android:drawablePadding="5dp"
+                    android:textSize="16sp"
+                    android:text="+86"/>
+
+            <EditText
+                    android:id="@+id/et_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone"
+                    android:text="@={viewModel.accountName}"
+                    android:textColor="@color/font_black"
+                    android:textSize="15sp"
+                    android:singleLine="true"
+                    android:hint="@{viewModel.accountHint}"
+                    tools:hint="请输入手机号码"
+                    android:background="@null"/>
+        </LinearLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.3dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
+                android:background="@color/gray_light"/>
+
+        <!-- 密码 -->
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
+                android:orientation="horizontal">
+
+            <EditText
+                    android:id="@+id/et_pwd"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:inputType="textPassword"
+                    android:layout_height="wrap_content"
+                    android:text="@={viewModel.passWord}"
+                    android:textColor="@color/font_black"
+                    android:textSize="15sp"
+                    android:singleLine="true"
+                    android:hint="请输入密码"
+                    android:background="@null"/>
+
+            <ImageView
+                    android:id="@+id/ivSwitchPwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    bind:onClickCommand="@{viewModel.passwordShowSwitchOnClick}"
+                    android:src="@drawable/login_pwd_invisible"/>
+        </LinearLayout>
+
+        <View
+              android:layout_width="match_parent"
+              android:layout_height="0.3dp"
+              android:layout_marginStart="25dp"
+              android:layout_marginEnd="25dp"
+              android:background="@color/gray_light"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textColor="@color/font_blue_light"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="25dp"
+                bind:onClickCommand="@{viewModel.forgetPwdClick}"
+                android:text="忘记密码?"/>
+
+        <Button
+                android:layout_width="match_parent"
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                bind:onClickCommand="@{viewModel.loginClick}"
+                android:layout_marginTop="64dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="登陆"
+                android:layout_height="@dimen/btn_height"
+                android:background="@drawable/btn_bg_black"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    bind:onClickCommand="@{viewModel.switchLoginClick}"
+                    android:textColor="@color/font_black_light"
+                    android:text="@{viewModel.loginTypeText}"
+                    tools:text="手机号登陆"/>
+
+            <ImageView
+                    android:layout_width="0.3dp"
+                    android:layout_height="20dp"
+                    android:background="@color/font_black_light"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    bind:onClickCommand="@{viewModel.registerClick}"
+                    android:textColor="@color/font_black_light"
+                    android:text="用户注册"/>
+        </LinearLayout>
+    </LinearLayout>
 </layout>
