--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -4,14 +4,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data class="LoginRegisterBinding">
-        <variable name="viewModel" type="com.xinly.dendrobe.module.login.LoginRegisterViewModel"/>
+        <variable name="viewModel" type="com.xinly.dendrobe.module.user.LoginRegisterViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            tools:context=".module.login.LoginRegisterActivity">
+            tools:context=".module.user.LoginRegisterActivity">
 
         <ImageView
                 android:src="@drawable/login_bg_top"
