--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,7 +152,7 @@
                 android:layout_marginTop="64dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:text="登陆"
+                android:text="登录"
                 android:layout_height="@dimen/btn_height"
                 android:background="@drawable/btn_bg_black"/>
 
@@ -170,7 +170,7 @@
                     bind:onClickCommand="@{viewModel.switchLoginClick}"
                     android:textColor="@color/font_black_light"
                     android:text="@{viewModel.loginTypeText}"
-                    tools:text="手机号登陆"/>
+                    tools:text="手机号登录"/>
 
             <ImageView
                     android:layout_width="0.3dp"
