--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="font_gray">#999999</color>
     <color name="font_gray_light">#CCCCCC</color>
     <color name="font_blue_light">#228B9C</color>
+    <color name="font_cyan">#228B9C</color>
 </resources>
