--- a/app/src/main/res/layout/activity_change_security_code.xml
+++ b/app/src/main/res/layout/activity_change_security_code.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         xmlns:bind="http://schemas.android.com/apk/res-auto">
-    <data class="AccountBinding">
+    <data class="ChangeSefCodeBinding">
         <import type="android.text.InputType"/>
-        <variable name="viewModel" type="com.xinly.dendrobe.module.user.AccountBindingViewModel"/>
+        <variable name="viewModel" type="com.xinly.dendrobe.module.user.ChangeSecurityCodeViewModel"/>
     </data>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            tools:context=".module.user.AccountBindingActivity">
+            tools:context=".module.user.ChangeSecurityCodeViewModel">
 
         <include layout="@layout/layout_toolbar"
                  bind:toolBar="@{viewModel}"/>
@@ -32,23 +31,21 @@
                         android:id="@+id/iv_account"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
+                        android:src="@{(viewModel.type==0)?@drawable/reg_mobile:@drawable/reg_email}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@{(viewModel.type==0)?@drawable/reg_mobile:@drawable/reg_email}"
-                        tools:src="@drawable/reg_mobile"/>
+                        tools:src="@drawable/reg_mobile"
+                        tools:hint="请输入手机号码"/>
 
-                <EditText
-                        android:id="@+id/et_account"
+                <TextView
+                        android:id="@+id/tv_account"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="@{(viewModel.type==0)?InputType.TYPE_CLASS_PHONE:InputType.TYPE_TEXT_VARIATION_EMAIL_ADDRESS}"
-                        android:text="@={viewModel.accountName}"
+                        android:text="@{viewModel.accountName}"
                         android:textColor="@color/font_black"
                         android:textSize="15sp"
                         android:singleLine="true"
-                        android:hint="@{(viewModel.type==0)?@string/user_phone_input:@string/user_email_input}"
-                        tools:hint="请输入手机号码"
-                        android:background="@null"/>
+                        tools:hint="请输入手机号码"/>
             </LinearLayout>
 
             <View android:layout_width="match_parent"
@@ -164,8 +161,20 @@
                 android:layout_marginTop="82dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:text="完成"
+                android:text="下一步"
                 android:layout_height="@dimen/btn_height"
                 android:background="@drawable/btn_bg_black"/>
+
+        <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="5dp"
+                bind:onClickCommand="@{viewModel.switchClick}"
+                android:textColor="@color/font_black"
+                android:layout_gravity="center_horizontal"
+                android:text="@{(viewModel.type==0)?@string/user_phone_find:@string/user_email_find}"
+                android:drawableEnd="@drawable/arrow_right_black"
+                tools:text="使用邮箱找回"/>
     </LinearLayout>
 </layout>
