--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -190,7 +190,7 @@
                   android:layout_marginStart="43dp"
                   android:background="@color/gray_light"/>
 
-            <!-- 账户 -->
+            <!-- 推荐人 -->
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
