--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="font_blue_light">#228B9C</color>
     <color name="font_cyan">#228B9C</color>
     <color name="font_orange">#F46B45</color>
+    <color name="font_red_light">#F04C4D</color>
 </resources>
