--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -56,6 +56,7 @@
                     android:textSize="12sp"
                     android:gravity="center"
                     android:layout_marginTop="20dp"
+                    bind:onClickCommand="@{viewModel.cloudRechargeClick}"
                     android:visibility="@{viewModel.type?View.VISIBLE:View.INVISIBLE}"
                     android:background="@drawable/wallet_bg_ffe000"
                     android:layout_alignParentEnd="true"
