--- a/app/src/main/res/layout/item_mall_menu.xml
+++ b/app/src/main/res/layout/item_mall_menu.xml
@@ -9,8 +9,7 @@
             android:id="@+id/menuIcon"
             android:layout_marginTop="10dp"
             android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="#EDF8FC"/>
+            android:layout_height="70dp"/>
 
     <TextView
             android:id="@+id/menuName"
